# eyebot-rs

./: Cargo.toml  README.md  clippy.txt  options.toml
src/: cli.rs  main.rs  options.rs  twitch.rs
src/auth/: access.rs  creds.rs  error.rs  mod.rs  oauth.rs
src/bot/: data.rs  error.rs  interface.rs  mod.rs
src/chat/: client.rs  data.rs  error.rs  interface.rs  mod.rs  tag.rs
src/eventsub/: client.rs  data.rs  error.rs  event.rs  mod.rs  outbound.rs  subscription.rs  tls.rs
src/eye/: builtin.rs  command.rs  io.rs  listener.rs  mod.rs
src/eye/comet/: component.rs  feature.rs  interface.rs  message.rs  mod.rs  server.rs
