[package]
name = "eyebot"
version = "0.1.0"
edition = "2021"
authors = ["eyemotif"]


[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
irc = "0.15.0"
reqwest = { version = "0.11.14", features = ["rustls-tls-webpki-roots"] }
ring = { version = "0.16.20", features = ["std"] }
rustls = "0.20.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tiny_http = "0.12.0"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "io-std", "time", "fs", "sync"] }
urlencoding = "2.1.2"
webpki-roots = "0.22.6"
tokio-stream = "0.1.11"
home = "0.5.4"
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.7.2"

# [profile.release]
# panic = "abort"
