[package]
name = "eyebot"
version = "0.1.0"
edition = "2021"
authors = ["eyemotif"]


[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
irc = "0.15.0"
reqwest = { version = "0.11.18", features = ["rustls-tls-webpki-roots"] }
ring = { version = "0.16.20", features = ["std"] }
rustls = "0.21.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.92"
tiny_http = "0.12.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "io-std", "time", "fs", "sync"] }
urlencoding = "2.1.2"
webpki-roots = "0.23.1"
home = "0.5.5"
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.7.4"
regex = "1.8.3"
lazy_static = "1.4.0"
futures-util = "0.3.28"

[profile.release]
panic = "abort"
